クラス名変更のため